--- a/index.html
+++ b/index.html
@@ -191,4 +191,4 @@
     
     <a href="https://claude.ai/" class="claude-logo" target="_blank">Enhanced by Claude</a>
 </body>
-</html>
+</html><!-- SSH test -->
